# ixmp4

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DEVELOPING.md  Dockerfile  LICENSE  README.md  alembic.ini  dev.env  pyproject.toml  template.env  test.py
.github/: codecov.yml
.github/workflows/: black.yaml  build-docs.yaml  deploy.yaml  docker.yaml  flake8.yaml  isort.yaml  lint.yaml  mypy.yaml  publish.yaml  publish_conda.yaml  publish_test.yaml  push_tag_event.json  pytest.yaml  release_event.json
.zed/: debug.json  tasks.json
doc/: Makefile  README.md  modules.rst
doc/source/: architecture.rst  auth.rst  cli.rst  conf.py  configuration.rst  contributors.rst  data-model.rst  docker.rst  exceptions.rst  funding.rst  index.rst  installation.rst  ixmp4.cli.rst  license.rst  locks-and-versioning.rst  modules.rst  openapi-v1.json  setup.rst  structure-architecture.rst  tests.rst
doc/source/_bib/: references.bib
doc/source/_static/: iiasa.css
doc/source/core/: docs.rst  exceptions.rst  meta.rst  region.rst  run.rst  scenario.rst  unit.rst
doc/source/data/: common.rst  iamc.rst  modules.rst  optimization.rst  pagination.rst
doc/source/development/: architecture.rst  database.rst  docker.rst  services.rst  tests.rst  transport.rst  version-tables-and-triggers.rst
doc/source/devs/: ixmp4.cli.rst  ixmp4.conf.rst  ixmp4.db.rst  ixmp4.db.utils.rst  modules.rst  tests.rst
doc/source/ixmp4.core/: iamc.rst  model.rst  optimization.rst  platform.rst  run.rst  scenario.rst  unit.rst
doc/source/ixmp4.data/: iamc.rst  modules.rst  optimization.rst  (+1 more)
docker/: Makefile  README.md  docker-compose.yml  docker.env  start.sh
ixmp4/: __init__.py  __main__.py  backend.py  base_exceptions.py  exceptions.py  transport.py
ixmp4/cli/: __init__.py  alembic.py  banner.py  platforms.py  server.py  utils.py
ixmp4/conf/: __init__.py  auth.py  base.py  credentials.py  manager.py  platforms.py  settings.py  settingsmodel.py  toml.py  user.py
ixmp4/core/: __init__.py  base.py  checkpoint.py  checkpoints.py  decorators.py  docs.py  exceptions.py  meta.py  model.py  platform.py  region.py  run.py  scenario.py  unit.py  utils.py
ixmp4/data/: __init__.py  backend.py  compat_controller.py  dataframe.py  generator.py  pagination.py  types.py
ixmp4/db/: __init__.py  filters.py  models.py
ixmp4/models/: region.py  versions.py
ixmp4/rewrite/: backend.py  exceptions.py  transport.py
ixmp4/server/: __init__.py  deps.py  middleware.py  v1.py  workers.py
ixmp4/services/: __init__.py  base.py  dto.py  http.py  middleware.py  procedure.py  protocols.py  region.py  test.py  transport.py
tests/: __init__.py  auth.py  backends.py  base.py  conftest.py  custom_exception.py  docker-compose.yml  profiling.py  test_api.py  test_auth.py  test_benchmark_filters.py  test_benchmark_rest_filters.py  test_benchmarks.py  test_ixmp.py  test_migrations.py  utils.py
tests/api/: base.py  test_checkpoint_api.py  test_iamc_timeseries_api.py  test_iamc_variable_api.py  test_meta.py  test_model.py  test_model_api.py  test_openapi_api.py  test_optimization_equation_api.py  test_optimization_indexset_api.py  test_optimization_parameter_api.py  test_optimization_scalar_api.py  test_optimization_table_api.py  test_optimization_variable_api.py  test_pagination.py  test_platform_api.py  test_region.py  test_region_api.py  test_run_api.py  test_run_meta_api.py  test_scenario.py  test_scenario_api.py  test_server.py  test_unit.py  test_unit_api.py
tests/cli/: test_alembic.py  test_app.py  test_main.py  test_platforms.py  test_server.py
tests/conf/: test_manager.py  test_settings.py  test_toml.py
tests/core/: base.py  test_benchmarks.py  test_checkpoint.py  test_checkpoint_view.py  test_filters.py  test_iamc.py  test_iamc_data.py  test_iamc_variable.py  test_indexset.py  test_meta.py  test_model.py  test_optimization_equation.py  test_optimization_indexset.py  test_optimization_parameter.py  test_optimization_scalar.py  test_optimization_table.py  test_optimization_variable.py  test_optimizationvariable.py  test_region.py  test_run.py  test_scalar.py  test_scenario.py  test_squash_versions.py  test_table.py  test_transact.py  test_unit.py  test_variable.py
tests/data/: base.py  test_benchmark_optimization_parameter.py  test_checkpoint_service.py  test_count.py  test_docs.py  test_iamc_convenience_services.py  test_iamc_datapoint.py  test_iamc_datapoint_service.py  test_iamc_datapoints_service.py  test_iamc_timeseries_service.py  test_iamc_variable.py  test_iamc_variable_service.py  test_iamc_variables_service.py  test_meta.py  test_meta_service.py  test_model.py  test_model_service.py  test_optimization_equation.py  test_optimization_equation_service.py  test_optimization_indexset.py  test_optimization_indexset_service.py  test_optimization_parameter.py  test_optimization_parameter_service.py  test_optimization_scalar.py  test_optimization_scalar_service.py  test_optimization_table.py  test_optimization_table_service.py  test_optimization_variable.py  test_optimization_variable_service.py  test_region.py  test_region_service.py  test_run.py  test_run_service.py  test_scenario.py  test_scenario_service.py  test_unit.py  test_unit_service.py
tests/db/: test_migrations.py  test_version_check.py
tests/fixtures/: __init__.py  generate_parameter_data.py  manager.json
tests/lib/: test_conf.py  test_exceptions.py  test_ixmp4_namespace.py  test_pyam.py
tests/profiling/: test_profile_indexsets.py  test_profiling_parameters.py
tests/unit/: test_platform.py  test_procedure.py  test_reverter.py  test_server.py  test_server_middleware.py  test_server_v1.py  test_squash_versions.py  test_transport.py  test_version_autogenerate.py
tutorial/transport/: 0_transport-tutorial_platform-setup.ipynb  1_transport-tutorial.ipynb  2_transport-tutorial_variant.ipynb  dantzig_model_gams.py  dantzig_model_linopy.py  gams_transport.ipynb  gams_transport_scenario.ipynb  linopy_model.py  linopy_transport.ipynb  linopy_transport_scenario.ipynb  py_transport.ipynb  transport_ixmp4.gms  utils.py
(+651 files in other folders)
